<resources>
    <string name="app_name">ClothingApp</string>
    <string name="my_cart">My Cart</string>
    <string name="profile">Profile</string>
    <string name="menu">Menu</string>
    <string name="all_products">All products</string>
    <string name="filter">Filter</string>
    <string name="login">Login</string>
    <string name="app_icon">appIcon</string>
    <string name="register">Register</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="total">Total</string>
    <string name="profile_info">Profile Info</string>
    <string name="email">Email</string>
    <string name="register_register">Register</string>
    <string name="register_login">Login</string>
    <string name="select_size">Select size</string>
    <string name="select_color">Select color</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="egp_0_00">EGP 0,00</string>
    <string name="overthesea">overthesea</string>
    <string name="log_out">Log out</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="update_profile">Update Profile</string>
    <string-array name="clothes_size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>X Large</item>
    </string-array>
    <string-array name="clothes_color">
        <item>Black</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
    </string-array>
</resources>