<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.productDetails.ProductDetailsActivity"
    tools:ignore="MissingDefaultResource">
<!--
    <androidx.appcompat.widget.AppCompatImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:foreground="?attr/actionModeCloseDrawable"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/btn_back">
    </androidx.appcompat.widget.AppCompatImageButton>
-->
    <Button
        android:id="@+id/backToMain"
        android:layout_width="32dp"
        android:layout_height="24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/ic_arrow_back_24"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--    add image-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:id="@+id/iv_product"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_product_price"
        android:layout_marginBottom="20dp"
        android:scaleType="fitXY">

    </ImageView>
    <!--    add price-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_product_price"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_product"
        android:layout_marginTop="17dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold">
    </TextView>
    <!--    add product name-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_product_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_product_price"
        android:layout_marginTop="15dp"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
    </TextView>
    <!--    add select size dropdown menu-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginTop="20dp"
        android:id="@+id/size_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_product_name"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="15sp"
            android:text="@string/select_size"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_marginTop="5dp"
        android:id="@+id/color_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/size_menu"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

        <AutoCompleteTextView
            android:id="@+id/autoCompleteTextView_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="15sp"
            android:text="@string/select_color"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:textStyle="bold"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    add to cart-->
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_to_cart"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/buttonshape"
        android:textColor="@color/white"
        android:text="@string/add_to_cart"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        >

    </androidx.appcompat.widget.AppCompatButton>



</androidx.constraintlayout.widget.ConstraintLayout>